# cloud-final-proj

./: README.md  pyproject.toml
client/: client.py
server/: app.py
server/cdk/: cdk_stack.py
server/cdk/lambda/: dynamo.py  lambda-handler.py  main.py  secretsmanager.py  textract.py
server/cdk/lambda/handlers/: feature.py  user.py
server/cdk/lambda/utils/: dynamo.py  secretsmanager.py  textract.py
