[tool.poetry]
name = "cloud-final-proj"
version = "0.1.0"
description = ""
authors = ["Chayapol Parisonyu <cpari@sertiscorp.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "^2.23.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
